fixed footer logo being onbottom of scrollbar

--- a/static/css/footer.less
+++ b/static/css/footer.less
@@ -43,4 +43,5 @@
     transition: @btrans;
     height: 20px;
     fill: @ultra_accents;
+    margin-right: 10px;
 }
